Demo semi dynamic setup

--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -9,8 +9,8 @@ defaults
 frontend stats
   mode http
   bind 0.0.0.0:4001
-  stats enable
   stats uri /stats
+  stats enable
 
 frontend front1
   bind    0.0.0.0:4000
@@ -18,4 +18,5 @@ frontend front1
 
 backend back1
   mode http
-  server-template web 20 127.0.0.1:9999 disabled
+  server web1 web1:5000
+  server-template web 2-20 127.0.0.1:9999 disabled
